--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #54504f;
+  background-image: url('./bg.jpg');
+  background-repeat: repeat;
+  background-size: cover;
+  background-blend-mode: multiply;
 }
 
 code {
